--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This message is from designer</h1>
+    <h1>This message is from Master</h1>
 </body>
 </html>
