--- a/marjan.html
+++ b/marjan.html
@@ -9,7 +9,7 @@
 <body>
     
     <form action="" method="post">  
-        <input type="text" name="date">
+        <input type="text" name="shamsi_date">
     </form>
 </body>
 </html>
